{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 90,
  "lineage": "ba029427-9625-0424-928e-3d869a0ebf23",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmeter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:630729326585:instance/i-0dac832b237e92f73",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dac832b237e92f73",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f88e944bf85378ad",
            "private_dns": "ip-10-0-6-16.us-east-2.compute.internal",
            "private_ip": "10.0.6.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e787b1dfe01d68a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04040552cb4ede05a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07573e90c3de3501b"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:630729326585:instance/i-07cb24f0ad37db45b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cb24f0ad37db45b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d012440a60dde935",
            "private_dns": "ip-10-0-7-153.us-east-2.compute.internal",
            "private_ip": "10.0.7.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fc19bc02fc603cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091176cd84c701ed9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07573e90c3de3501b"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:630729326585:instance/i-0aa93f5ebd3f65220",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa93f5ebd3f65220",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a624e45844541c0f",
            "private_dns": "ip-10-0-6-70.us-east-2.compute.internal",
            "private_ip": "10.0.6.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-015cc026aaa4e5dde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04040552cb4ede05a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07573e90c3de3501b"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:630729326585:instance/i-06db668887425be88",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06db668887425be88",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009f04262dddd5877",
            "private_dns": "ip-10-0-7-93.us-east-2.compute.internal",
            "private_ip": "10.0.7.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060693f3d71de4c32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091176cd84c701ed9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07573e90c3de3501b"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:630729326585:instance/i-0d09ff6a007528cd6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d09ff6a007528cd6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059906351407256be",
            "private_dns": "ip-10-0-6-198.us-east-2.compute.internal",
            "private_ip": "10.0.6.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc5388e545baa8fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04040552cb4ede05a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07573e90c3de3501b"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d495e9c8c1133178",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-142-86-13.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.86.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d495e9c8c1133178",
            "id": "nat-0c84fbfa46b8b2903",
            "network_interface_id": "eni-0a886a4ec1c606af7",
            "private_ip": "10.0.0.55",
            "public_ip": "3.142.86.13",
            "subnet_id": "subnet-0636a625da66137d2",
            "tags": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dbbdab6b2ad713241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c84fbfa46b8b2903",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbbdab6b2ad71324",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.nat_eip",
            "module.subnet.aws_nat_gateway.nat",
            "module.subnet.aws_route_table.private_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:route-table/rtb-0dbbdab6b2ad71324",
            "id": "rtb-0dbbdab6b2ad71324",
            "owner_id": "630729326585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Priv-RT"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:route-table/rtb-0f25d279a195241a2",
            "id": "rtb-0f25d279a195241a2",
            "owner_id": "630729326585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0022ed67f6d9fd7ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub-RT"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f142f426b7d28d",
            "route_table_id": "rtb-0dbbdab6b2ad71324",
            "subnet_id": "subnet-04040552cb4ede05a"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008e908630d1b7359",
            "route_table_id": "rtb-0dbbdab6b2ad71324",
            "subnet_id": "subnet-091176cd84c701ed9"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03055c19e572a17d3",
            "route_table_id": "rtb-0f25d279a195241a2",
            "subnet_id": "subnet-0636a625da66137d2"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08946b121beec9481",
            "route_table_id": "rtb-0f25d279a195241a2",
            "subnet_id": "subnet-0019955a91a612e1a"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec09fd3e1cf602e4",
            "route_table_id": "rtb-0f25d279a195241a2",
            "subnet_id": "subnet-066c34f3fe7457971"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0093f0c35b570828a",
            "route_table_id": "rtb-0f25d279a195241a2",
            "subnet_id": "subnet-00513923e867523e3"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082acfd459fb7c974",
            "route_table_id": "rtb-0f25d279a195241a2",
            "subnet_id": "subnet-0608ffb2877e601dc"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-04040552cb4ede05a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04040552cb4ede05a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Priv-Subnet-1"
            },
            "tags_all": {
              "Name": "Priv-Subnet-1"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-091176cd84c701ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-091176cd84c701ed9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Priv-Subnet-2"
            },
            "tags_all": {
              "Name": "Priv-Subnet-2"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-0636a625da66137d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0636a625da66137d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Pub-Subnet-1"
            },
            "tags_all": {
              "Name": "Pub-Subnet-1"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-0019955a91a612e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0019955a91a612e1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Pub-Subnet-2"
            },
            "tags_all": {
              "Name": "Pub-Subnet-2"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-066c34f3fe7457971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-066c34f3fe7457971",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Pub-Subnet-3"
            },
            "tags_all": {
              "Name": "Pub-Subnet-3"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-00513923e867523e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00513923e867523e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Pub-Subnet-4"
            },
            "tags_all": {
              "Name": "Pub-Subnet-4"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:subnet/subnet-0608ffb2877e601dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0608ffb2877e601dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630729326585",
            "tags": {
              "Name": "Pub-Subnet-5"
            },
            "tags_all": {
              "Name": "Pub-Subnet-5"
            },
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:internet-gateway/igw-0022ed67f6d9fd7ed",
            "id": "igw-0022ed67f6d9fd7ed",
            "owner_id": "630729326585",
            "vpc_id": "vpc-0a62002b25fd617b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630729326585:vpc/vpc-0a62002b25fd617b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ea0ec0cd01fc3f1",
            "default_route_table_id": "rtb-0228cb696575a1d11",
            "default_security_group_id": "sg-07573e90c3de3501b",
            "dhcp_options_id": "dopt-124ffb79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a62002b25fd617b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0228cb696575a1d11",
            "owner_id": "630729326585"
          }
        }
      ]
    }
  ]
}